--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <img src="icons/logo.png" alt="Logo" class="nav-logo">
   </h2>-->
   <div class="nav-buttons">
-    <button id="export-btn"><i class="fa-solid fa-file-export"></i> Exporti</button>
+    <button id="export-btn"><i class="fa-solid fa-file-export"></i> Export</button>
     <input type="file" id="import-file" accept=".json" hidden />
     <button id="import-btn"><i class="fa-solid fa-file-import"></i> Import</button>
     <button id="reset-btn"><i class="fa-solid fa-rotate-left"></i></button>
@@ -133,6 +133,7 @@
 
 </body>
 </html>
+
 
 
 
