--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <img src="icons/logo.png" alt="Logo" class="nav-logo">
   </h2>-->
 <div class="nav-buttons">
-  <a href="#" id="exportData"><i class="fa-solid fa-file-export"></i> Export</a>
-  <a href="#" id="importData"><i class="fa-solid fa-file-import"></i> Import</a>
+  <a id="exportData"><i class="fa-solid fa-file-export"></i> Export</a>
+  <a id="importData"><i class="fa-solid fa-file-import"></i> Import</a>
   <input type="file" id="importFile" accept="application/json" style="display:none;">
   <a href="#" id="resetData"><i class="fa-solid fa-rotate-left"></i></a>
 </div>
@@ -131,6 +131,7 @@
 
 </body>
 </html>
+
 
 
 
