--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
   <!--<h2 class="logo">
     <img src="icons/logo.png" alt="Logo" class="nav-logo">
   </h2>-->
-<div class="nav-buttons">
-  <a id="exportData"><i class="fa-solid fa-file-export"></i> Export</a>
-  <a id="importData"><i class="fa-solid fa-file-import"></i> Import</a>
-  <input type="file" id="importFile" accept="application/json" style="display:none;">
-  <a href="#" id="resetData"><i class="fa-solid fa-rotate-left"></i></a>
-</div>
-
+  <div class="nav-buttons">
+    <button id="export-btn"><i class="fa-solid fa-file-export"></i> Exporti</button>
+    <input type="file" id="import-file" accept=".json" hidden />
+    <button id="import-btn"><i class="fa-solid fa-file-import"></i> Import</button>
+    <button id="reset-btn"><i class="fa-solid fa-rotate-left"></i></button>
+    <!-- Floating Help Button -->
+  </div>
 	<p id="help-btn" class="help-btn"><i class="fa-solid fa-question"></i></p>
 </div>
 
@@ -131,6 +131,7 @@
 
 </body>
 </html>
+
 
 
 
