--- a/index.html
+++ b/index.html
@@ -11,7 +11,62 @@
   <link rel="manifest" href="manifest.json">
 
 </head>
+<Style>
+/* Dropdown floating top-right */
+.dropdown {
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  display: inline-block;
+  z-index: 9999;
+}
 
+.dropbtn {
+  background: none;
+  border: none;
+  color: white;
+  font-size: 18px;
+}
+
+.dropbtn:hover{
+  background: none;
+  border: none;
+}
+
+/* Dropdown (always hidden until JS toggles it) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  right: 0;
+  top: 100%;
+  background-color: #fff;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
+  border-radius: 6px;
+  z-index: 2000; /* make sure it's above header */
+}
+
+.dropdown-content a {
+  color: #333;
+  padding: 10px 14px;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+}
+
+.dropdown-content a i {
+  margin-right: 8px;
+  color: #034ba5;
+}
+
+.dropdown-content a:hover {
+  background-color: #f1f1f1;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+</Style>
 
 <!-- Navbar -->
 <div class="navbar">
@@ -199,8 +254,31 @@
     }
   });
 	</script>
+
+	<script>
+		<script>
+  const dropBtn = document.querySelector(".dropbtn");
+  const dropdownContent = document.querySelector(".dropdown-content");
+
+  dropBtn.addEventListener("click", (e) => {
+    e.stopPropagation();
+    dropdownContent.style.display =
+      dropdownContent.style.display === "block" ? "none" : "block";
+  });
+
+  document.addEventListener("click", () => {
+    dropdownContent.style.display = "none";
+  });
+</script>
+<script>
+  document.getElementById("viewSeettuBtn").addEventListener("click", () => {
+    window.location.href = "list.html";
+  });
+</script>
+	</script>
 </body>
 </html>
+
 
 
 
